@@ -1,4 +1,5 @@
-package midterm_exam;
+import java.util.ArrayList;
+import java.util.List;
 
 public class Q12_StudentBstSystem {
     public static class Student {
@@ -7,18 +8,26 @@ public class Q12_StudentBstSystem {
         private int score;
 
         public Student(int id, String name, int score) {
-            if (id <= 0) throw new IllegalArgumentException("ID must be positive");
-            if (name == null || name.trim().isEmpty()) throw new IllegalArgumentException("Name cannot be null or blank");
+            if (id <= 0 || name == null || name.isBlank()) {
+                throw new IllegalArgumentException();
+            }
             this.id = id;
-            this.name = name.trim();
+            this.name = name;
             this.score = Math.max(0, Math.min(100, score));
         }
 
-        public int getId() { return id; }
-        public String getName() { return name; }
-        public int getScore() { return score; }
-        public void setScore(int score) { this.score = Math.max(0, Math.min(100, score)); }
-        
+        public int getId() {
+            return id;
+        }
+
+        public String getName() {
+            return name;
+        }
+
+        public int getScore() {
+            return score;
+        }
+
         @Override
         public String toString() {
             return id + "|" + name + "|" + score;
@@ -26,10 +35,15 @@ public class Q12_StudentBstSystem {
     }
 
     private static class Node {
-        Student student;
-        Node left, right;
-        Node(Student student) { this.student = student; }
+        Student data;
+        Node left;
+        Node right;
+
+        Node(Student data) {
+            this.data = data;
+        }
     }
+
     private Node root;
 
     public boolean add(Student student) {
@@ -38,83 +52,96 @@ public class Q12_StudentBstSystem {
             root = new Node(student);
             return true;
         }
-        Node curr = root;
+        Node current = root;
         while (true) {
-            if (student.getId() == curr.student.getId()) return false;
-            if (student.getId() < curr.student.getId()) {
-                if (curr.left == null) { curr.left = new Node(student); return true; }
-                curr = curr.left;
+            if (student.getId() == current.data.getId()) return false;
+            if (student.getId() < current.data.getId()) {
+                if (current.left == null) {
+                    current.left = new Node(student);
+                    return true;
+                }
+                current = current.left;
             } else {
-                if (curr.right == null) { curr.right = new Node(student); return true; }
-                curr = curr.right;
+                if (current.right == null) {
+                    current.right = new Node(student);
+                    return true;
+                }
+                current = current.right;
             }
         }
     }
 
     public Student find(int id) {
-        Node curr = root;
-        while (curr != null) {
-            if (id == curr.student.getId()) return curr.student;
-            curr = (id < curr.student.getId()) ? curr.left : curr.right;
+        Node current = root;
+        while (current != null) {
+            if (id == current.data.getId()) return current.data;
+            current = id < current.data.getId() ? current.left : current.right;
         }
         return null;
     }
 
     public boolean updateScore(int id, int score) {
-        Student s = find(id);
-        if (s != null) {
-            s.setScore(score);
-            return true;
-        }
-        return false;
+        Student student = find(id);
+        if (student == null) return false;
+        student.score = Math.max(0, Math.min(100, score));
+        return true;
     }
 
     public boolean remove(int id) {
         if (find(id) == null) return false;
-        root = removeHelp(root, id);
+        root = removeHelper(root, id);
         return true;
     }
 
-    private Node removeHelp(Node node, int id) {
+    private Node removeHelper(Node node, int id) {
         if (node == null) return null;
-        if (id < node.student.getId()) {
-            node.left = removeHelp(node.left, id);
-        } else if (id > node.student.getId()) {
-            node.right = removeHelp(node.right, id);
+        if (id < node.data.getId()) {
+            node.left = removeHelper(node.left, id);
+        } else if (id > node.data.getId()) {
+            node.right = removeHelper(node.right, id);
         } else {
             if (node.left == null) return node.right;
             if (node.right == null) return node.left;
             Node successor = node.right;
             while (successor.left != null) successor = successor.left;
-            node.student = successor.student;
-            node.right = removeHelp(node.right, successor.student.getId());
+            node.data = successor.data;
+            node.right = removeHelper(node.right, successor.data.getId());
         }
         return node;
     }
 
-    public java.util.List<Student> studentsBetween(int lowId, int highId) {
+    public List<Student> studentsBetween(int lowId, int highId) {
         // student-index-check S12-88
-        java.util.List<Student> list = new java.util.ArrayList<>();
-        if (lowId > highId) return list;
-        rangeHelp(root, lowId, highId, list);
-        return list;
-    }
-    private void rangeHelp(Node node, int low, int high, java.util.List<Student> list) {
-        if (node == null) return;
-        if (low < node.student.getId()) rangeHelp(node.left, low, high, list);
-        if (node.student.getId() >= low && node.student.getId() <= high) list.add(node.student);
-        if (high > node.student.getId()) rangeHelp(node.right, low, high, list);
+        List<Student> result = new ArrayList<>();
+        if (lowId <= highId) {
+            rangeHelper(root, lowId, highId, result);
+        }
+        return result;
     }
 
-    public java.util.List<Student> inorder() {
-        java.util.List<Student> list = new java.util.ArrayList<>();
-        inorderHelp(root, list);
-        return list;
-    }
-    private void inorderHelp(Node node, java.util.List<Student> list) {
+    private void rangeHelper(Node node, int lowId, int highId, List<Student> result) {
         if (node == null) return;
-        inorderHelp(node.left, list);
-        list.add(node.student);
-        inorderHelp(node.right, list);
+        if (node.data.getId() > lowId) {
+            rangeHelper(node.left, lowId, highId, result);
+        }
+        if (node.data.getId() >= lowId && node.data.getId() <= highId) {
+            result.add(node.data);
+        }
+        if (node.data.getId() < highId) {
+            rangeHelper(node.right, lowId, highId, result);
+        }
+    }
+
+    public List<Student> inorder() {
+        List<Student> result = new ArrayList<>();
+        inorderHelper(root, result);
+        return result;
+    }
+
+    private void inorderHelper(Node node, List<Student> result) {
+        if (node == null) return;
+        inorderHelper(node.left, result);
+        result.add(node.data);
+        inorderHelper(node.right, result);
     }
 }
